--- a/css/components/section-1.css
+++ b/css/components/section-1.css
@@ -137,7 +137,7 @@ blockquote{
   flex-direction: row;
   overflow: auto;
   height: 120px;
-  padding:10px;
+  padding:10px 0;
 
 }
 .image-card {
